--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
       </div>
     </div>
 
+    <audio id="beep">
+      <source src="beep.mp3" type="audio/wav"/>
+    </audio>
+
+    <audio id="fail">
+      <source src="fail.mp3" type="audio/wav"/>
+    </audio>
+
     <script src="main.js"></script>
   </body>
 </html>
